--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # (string) Title of your wiki
-title: 
+title: SodaPop's Dungeons and Dragons Homebrew Wiki
 # (string) Description of your wiki
-description: 
+description: Wiki for Dungeons and Dragons homebrew that I have created.
 # (boolean) disable edit functionalities (edit/delete/add pages)
 disable_edit: false
 # (boolean) Enable/disable wiki page list in sidebar
@@ -19,11 +19,11 @@ paginate: 5
 paginate_path: "/assets/blog/page:num"
 permalink: "/assets/blog/posts/:year/:month/:day/:title:output_ext"
 # (boolean) Enable/disable download buttons in sidebar
-show_downloads: true
+show_downloads: false
 # (string) Specify branch rendered by gitpages allowing wiki tool buttons to work
 git_branch: "master"
 # (string) Url of logo image, it can be full, absolute or relative.
-logo_url: 
+logo_url: https://files.catbox.moe/wi8f2q.jpg
 # (string) The UA-XXXXX-Y code from google analytic to enable GA on your wiki
 google_analytics: 
 # (string) folder where wiki pages are stored, it's needed for tool buttons
